z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -394,7 +394,9 @@ style through utility classes to make component reusable.
     .textwithimage__text > *:not(:last-child) {
       margin-bottom: 4rem; }
     .textwithimage__text a {
-      align-self: start; }
+      align-self: start;
+      position: relative;
+      z-index: 10; }
     .textwithimage__text h1 {
       font-size: 2.4rem; }
     .textwithimage__text p {
